--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "2.2"
 
 services:
-  gtt-frontend:
+  normostrany:
     build: ./
     restart: $restart
     container_name: normostrany
     ports:
-      - "$Port:8000"
+      - "$Port:80"
